Fix collapsing menu bar for sarafi browser.

--- a/refinery/static/source/styles/less/refinery-style.less
+++ b/refinery/static/source/styles/less/refinery-style.less
@@ -110,16 +110,9 @@ ol, ul {
 .navbar-collapse.collapse {
   height: auto;
   overflow: visible;
-  width: 400px;
+  width: 390px;
   float: left;
   border: none;
-}
-
-.collapse {
-  position: relative;
-  height: 0;
-  overflow: hidden;
-  transition: height .35s ease;
 }
 
 .collapsing {
